--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -42,7 +42,7 @@ date: Last Modified
     <article>
       <picture>
         <source srcset="./illustrations/OGP.webp" type="image/webp"/>
-        <img src="./illustrations/OGP.jpg" alt=""/>
+        <img width="1280" height="905" src="./illustrations/OGP.jpg" alt=""/>
       </picture>
       <h1>新型コロナウイルスから子どもの心を守る。<abbr title="World Health Organization">WHO</abbr>から世界中の保護者たちへ。</h1>
       <div>目次</div>
@@ -78,7 +78,7 @@ date: Last Modified
       <section id="1-One-on-One-Time">
         <picture>
           <source srcset="./illustrations/01_00_yellow.webp" type="image/webp">
-          <img src="./illustrations/01_00_yellow.jpg" alt="イラスト：子どもの背後に母親が寄り添い、肩に手を添えている。二人とも微笑んでいる。" loading="lazy"/>
+          <img width="1280" height="905" src="./illustrations/01_00_yellow.jpg" alt="イラスト：子どもの背後に母親が寄り添い、肩に手を添えている。二人とも微笑んでいる。" loading="lazy"/>
         </picture>
         <header class="heading-anchor">
           <h2>1.『1対1の時間』</h2>
@@ -92,7 +92,7 @@ date: Last Modified
         <section id="Set-aside-time-to-spend-with-each-child">
           <picture>
             <source srcset="./illustrations/01_01.webp" type="image/webp"/>
-            <img src="./illustrations/01_01.jpg" alt="イラスト：子どもと母親が正面に向かって微笑んでいる。二人のまわりには携帯ゲーム機、遊具のある公園、調理中のフライパン、テント、トランプといったアクティビティのイメージが並ぶ。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/01_01.jpg" alt="イラスト：子どもと母親が正面に向かって微笑んでいる。二人のまわりには携帯ゲーム機、遊具のある公園、調理中のフライパン、テント、トランプといったアクティビティのイメージが並ぶ。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>それぞれの子どもと過ごせる時間を作りましょう</h3>
@@ -105,7 +105,7 @@ date: Last Modified
         <section id="Ask-your-child-what-they-would-like-to-do">
           <picture>
             <source srcset="./illustrations/01_02.webp" type="image/webp"/>
-            <img src="./illustrations/01_02.jpg" alt="イラスト：子どもが母親に「あのね、」と話しかけている。母親は子どもの問いかけに耳を傾けている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/01_02.jpg" alt="イラスト：子どもが母親に「あのね、」と話しかけている。母親は子どもの問いかけに耳を傾けている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>子どもに、何がしたいか聞きましょう</h3>
@@ -120,7 +120,7 @@ date: Last Modified
         <section id="Ideas-with-your-baby-toddler">
           <picture>
             <source srcset="./illustrations/01_03.webp" type="image/webp"/>
-            <img src="./illustrations/01_03.jpg" alt="イラスト：おくるみに包まれた赤ちゃんが、鍋の底をスプーンで叩く音色を聞いて「♥」と喜んでいる。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/01_03.jpg" alt="イラスト：おくるみに包まれた赤ちゃんが、鍋の底をスプーンで叩く音色を聞いて「♥」と喜んでいる。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>赤ちゃんや3歳くらいまでの子どもとの過ごし方</h3>
@@ -138,7 +138,7 @@ date: Last Modified
         <section id="Ideas-with-your-young-child">
           <picture>
             <source srcset="./illustrations/01_04.webp" type="image/webp"/>
-            <img src="./illustrations/01_04.jpg" alt="イラスト：楽しそうな様子で、女の子はホウキを、父親は雑巾を手にしている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/01_04.jpg" alt="イラスト：楽しそうな様子で、女の子はホウキを、父親は雑巾を手にしている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>小さい子どもとの過ごし方</h3>
@@ -157,7 +157,7 @@ date: Last Modified
         <section id="Ideas-with-your-teenager">
           <picture>
             <source srcset="./illustrations/01_05.webp" type="image/webp"/>
-            <img src="./illustrations/01_05.jpg" alt="イラスト：テレビゲームに興じる親子。手を上げて喜ぶ男の子と、弱り顔ながら微笑む父親。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/01_05.jpg" alt="イラスト：テレビゲームに興じる親子。手を上げて喜ぶ男の子と、弱り顔ながら微笑む父親。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>思春期の子どもとの過ごし方</h3>
@@ -180,7 +180,7 @@ date: Last Modified
       <section id="2-Keeping-It-Positive">
         <picture>
           <source srcset="./illustrations/02_00_yellow.webp" type="image/webp"/>
-          <img src="./illustrations/02_00_yellow.jpg" alt="イラスト：女の子と母親がお互いに明るく話をしている。" loading="lazy"/>
+          <img width="1280" height="905" src="./illustrations/02_00_yellow.jpg" alt="イラスト：女の子と母親がお互いに明るく話をしている。" loading="lazy"/>
         </picture>
         <header class="heading-anchor">
           <h2>2.『肯定的でいましょう』</h2>
@@ -194,7 +194,7 @@ date: Last Modified
         <section id="Say-the-behaviour-you-want-to-see">
           <picture>
             <source srcset="./illustrations/02_01.webp" type="image/webp"/>
-            <img src="./illustrations/02_01.jpg" alt="イラスト：母親が、片目を瞑って手を合わせながら、服をタンスにしまってほしいと子どもに頼んでいる。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/02_01.jpg" alt="イラスト：母親が、片目を瞑って手を合わせながら、服をタンスにしまってほしいと子どもに頼んでいる。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>あなたが子どもにしてほしい行動を言葉にしましょう。</h3>
@@ -207,7 +207,7 @@ date: Last Modified
         <section id="It’s-all-in-the-delivery">
           <picture>
             <source srcset="./illustrations/02_02.webp" type="image/webp"/>
-            <img src="./illustrations/02_02.jpg" alt="イラスト：避けるべき状況の例。声を上げて叱りつける母親、背を向けてふくれっ面になる子ども。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/02_02.jpg" alt="イラスト：避けるべき状況の例。声を上げて叱りつける母親、背を向けてふくれっ面になる子ども。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>すべては伝え方次第です</h3>
@@ -220,7 +220,7 @@ date: Last Modified
         <section id="Praise-your-child-when-they-are-behaving-well">
           <picture>
             <source srcset="./illustrations/02_03.webp" type="image/webp"/>
-            <img src="./illustrations/02_03.jpg" alt="イラスト：子どもと母親が、お互いに親指を立てながら笑顔で向かい合っている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/02_03.jpg" alt="イラスト：子どもと母親が、お互いに親指を立てながら笑顔で向かい合っている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>子どもが良い行動をした時は褒めましょう</h3>
@@ -234,7 +234,7 @@ date: Last Modified
         <section id="Get-real">
           <picture>
             <source srcset="./illustrations/02_04.webp" type="image/webp"/>
-            <img src="./illustrations/02_04.jpg" alt="イラスト：通話中のスマートフォンを持った母親が、微笑みながら口の前に人差し指を立て、静かにしてほしいと子どもに頼んでいる。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/02_04.jpg" alt="イラスト：通話中のスマートフォンを持った母親が、微笑みながら口の前に人差し指を立て、静かにしてほしいと子どもに頼んでいる。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>現実的な目標を</h3>
@@ -248,7 +248,7 @@ date: Last Modified
         <section id="Help-your-teen-stay-connected">
           <picture>
             <source srcset="./illustrations/02_05.webp" type="image/webp"/>
-            <img src="./illustrations/02_05.jpg" alt="イラスト：楽しげな子どもとスマートフォン。スマートフォンの先には何人もの友達が待っている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/02_05.jpg" alt="イラスト：楽しげな子どもとスマートフォン。スマートフォンの先には何人もの友達が待っている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>思春期の子どもには交流を</h3>
@@ -264,7 +264,7 @@ date: Last Modified
       <section id="3-Structure-Up">
         <picture>
           <source srcset="./illustrations/03_00_yellow.webp" type="image/webp"/>
-          <img src="./illustrations/03_00_yellow.jpg" alt="イラスト：行先を指差しながら、母親の手を引く子ども。二人とも楽しそうにしている。" loading="lazy"/>
+          <img width="1280" height="905" src="./illustrations/03_00_yellow.jpg" alt="イラスト：行先を指差しながら、母親の手を引く子ども。二人とも楽しそうにしている。" loading="lazy"/>
         </picture>
         <header class="heading-anchor">
           <h2>3.『新しい日課を作る』</h2>
@@ -276,7 +276,7 @@ date: Last Modified
         <section id="Create-a-flexible-but-consistent-daily-routine">
           <picture>
             <source srcset="./illustrations/03_01.webp" type="image/webp"/>
-            <img src="./illustrations/03_01.jpg" alt="イラスト：テーブルの上に置かれたカレンダーに、母親と子どもが話しながら予定を書き込もうとしている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/03_01.jpg" alt="イラスト：テーブルの上に置かれたカレンダーに、母親と子どもが話しながら予定を書き込もうとしている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>柔軟に、でも一貫した日課を作りましょう</h3>
@@ -293,7 +293,7 @@ date: Last Modified
         <section id="Teach-your-child-about-keeping-safe-distances">
           <picture>
             <source srcset="./illustrations/03_02.webp" type="image/webp"/>
-            <img src="./illustrations/03_02.jpg" alt="イラスト：二人の子ども。それぞれの周囲に黄色い円が描かれ、その円同士が少し離れている距離に二人は立っている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/03_02.jpg" alt="イラスト：二人の子ども。それぞれの周囲に黄色い円が描かれ、その円同士が少し離れている距離に二人は立っている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>周りとの適切な距離を保つことを教えましょう</h3>
@@ -310,7 +310,7 @@ date: Last Modified
         <section id="Make-handwashing-and-hygiene-fun">
           <picture>
             <source srcset="./illustrations/03_03.webp" type="image/webp"/>
-            <img src="./illustrations/03_03.jpg" alt="イラスト：手洗いの様子。手の隅々まで石鹸の泡が行き渡り、清潔になっていく。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/03_03.jpg" alt="イラスト：手洗いの様子。手の隅々まで石鹸の泡が行き渡り、清潔になっていく。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>手洗い・消毒を楽しく</h3>
@@ -326,7 +326,7 @@ date: Last Modified
         <section id="You-are-a-model-for-your-child’s-behavior">
           <picture>
             <source srcset="./illustrations/03_04.webp" type="image/webp"/>
-            <img src="./illustrations/03_04.jpg" alt="イラスト：フフンと得意げな様子で決め顔をする母親と、すこし驚いた様子でそれを見つめる子ども。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/03_04.jpg" alt="イラスト：フフンと得意げな様子で決め顔をする母親と、すこし驚いた様子でそれを見つめる子ども。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>あなたは子どもの見本です</h3>
@@ -347,7 +347,7 @@ date: Last Modified
       <section id="4-Bad-Behavior">
         <picture>
           <source srcset="./illustrations/04_00_yellow.webp" type="image/webp"/>
-          <img src="./illustrations/04_00_yellow.jpg" alt="イラスト：子どもが腕を組み、いろいろなモヤモヤを抱えて浮かない表情をたたえている。" loading="lazy"/>
+          <img width="1280" height="905" src="./illustrations/04_00_yellow.jpg" alt="イラスト：子どもが腕を組み、いろいろなモヤモヤを抱えて浮かない表情をたたえている。" loading="lazy"/>
         </picture>
         <header class="heading-anchor">
           <h2>4.『悪い行い』</h2>
@@ -359,7 +359,7 @@ date: Last Modified
         <section id="Redirect">
           <picture>
             <source srcset="./illustrations/04_01.webp" type="image/webp"/>
-            <img src="./illustrations/04_01.jpg" alt="イラスト：母親が、携帯ゲーム機を胸の前に掲げ、子どもに呼びかけている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/04_01.jpg" alt="イラスト：母親が、携帯ゲーム機を胸の前に掲げ、子どもに呼びかけている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>方向転換させましょう</h3>
@@ -375,7 +375,7 @@ date: Last Modified
         <section id="Take-a-Pause">
           <picture>
             <source srcset="./illustrations/04_02.webp" type="image/webp"/>
-            <img src="./illustrations/04_02.jpg" alt="イラスト：母親が、ふと真顔になり、すこし思い直している。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/04_02.jpg" alt="イラスト：母親が、ふと真顔になり、すこし思い直している。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>一度止まって考えましょう</h3>
@@ -390,7 +390,7 @@ date: Last Modified
         <section id="Use-consequences">
           <picture>
             <source srcset="./illustrations/04_03.webp" type="image/webp"/>
-            <img src="./illustrations/04_03.jpg" alt="イラスト：母親が子どもに対して重要なことを言い渡している。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/04_03.jpg" alt="イラスト：母親が子どもに対して重要なことを言い渡している。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>約束を破ると何が起きるかを子どもに伝えましょう</h3>
@@ -409,7 +409,7 @@ date: Last Modified
         <section id="Keep-using-Tips-1-3">
           <picture>
             <source srcset="./illustrations/04_04.webp" type="image/webp"/>
-            <img src="./illustrations/04_04.jpg" alt="イラスト：親子がカレンダーで予定を組む様子、親子とアクティビティのイメージ、親子が親指を立てて向き合う様子が、それぞれ矢印で繋がれて循環している。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/04_04.jpg" alt="イラスト：親子がカレンダーで予定を組む様子、親子とアクティビティのイメージ、親子が親指を立てて向き合う様子が、それぞれ矢印で繋がれて循環している。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>これらを繰り返しましょう</h3>
@@ -426,7 +426,7 @@ date: Last Modified
       <section id="5-Keep-Calm-and-Manage-Stress">
         <picture>
           <source srcset="./illustrations/05_00_yellow.webp" type="image/webp"/>
-          <img src="./illustrations/05_00_yellow.jpg" alt="イラスト：母親が目を閉じ、リラックスした様子で仰向けに横たわっている。" loading="lazy"/>
+          <img width="1280" height="905" src="./illustrations/05_00_yellow.jpg" alt="イラスト：母親が目を閉じ、リラックスした様子で仰向けに横たわっている。" loading="lazy"/>
         </picture>
         <header class="heading-anchor">
           <h2>5.『焦らずにストレスマネジメント』</h2>
@@ -438,7 +438,7 @@ date: Last Modified
         <section id="You-are-not-alone">
           <picture>
             <source srcset="./illustrations/05_01.webp" type="image/webp"/>
-            <img src="./illustrations/05_01.jpg" alt="イラスト：微笑む夫に妻が話しかけている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/05_01.jpg" alt="イラスト：微笑む夫に妻が話しかけている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>あなたは独りではありません</h3>
@@ -451,7 +451,7 @@ date: Last Modified
         <section id="Take-a-break">
           <picture>
             <source srcset="./illustrations/05_02.webp" type="image/webp"/>
-            <img src="./illustrations/05_02.jpg" alt="イラスト：微笑む夫婦の周りに、絵の具のついた絵筆、湯気が立つコーヒーカップ、テレビモニター、開いた書籍、音楽の流れるヘッドホンといったアクティビティのイメージが並ぶ。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/05_02.jpg" alt="イラスト：微笑む夫婦の周りに、絵の具のついた絵筆、湯気が立つコーヒーカップ、テレビモニター、開いた書籍、音楽の流れるヘッドホンといったアクティビティのイメージが並ぶ。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>休憩も取りましょう</h3>
@@ -464,7 +464,7 @@ date: Last Modified
         <section id="Listen-to-your-kids">
           <picture>
             <source srcset="./illustrations/05_03.webp" type="image/webp"/>
-            <img src="./illustrations/05_03.jpg" alt="イラスト：子どもが両手を上げながら何かを伝えようとし、母親はそれに耳を傾けている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/05_03.jpg" alt="イラスト：子どもが両手を上げながら何かを伝えようとし、母親はそれに耳を傾けている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>子どもの話を聞きましょう</h3>
@@ -478,7 +478,7 @@ date: Last Modified
         <section id="Take-a-Break">
           <picture>
             <source srcset="./illustrations/05_04.webp" type="image/webp"/>
-            <img src="./illustrations/05_04.jpg" alt="イラスト：母親が、目を閉じて足を組み、静かに笑みをたたえて瞑想している。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/05_04.jpg" alt="イラスト：母親が、目を閉じて足を組み、静かに笑みをたたえて瞑想している。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>ひと休みしましょう</h3>
@@ -535,7 +535,7 @@ date: Last Modified
       <section id="6-Talking-about-COVID-19">
         <picture>
           <source srcset="./illustrations/06_00_yellow.webp" type="image/webp"/>
-          <img src="./illustrations/06_00_yellow.jpg" alt="イラスト：父親が、子どもの背中に手を沿えながら話しかけている。" loading="lazy"/>
+          <img width="1280" height="905" src="./illustrations/06_00_yellow.jpg" alt="イラスト：父親が、子どもの背中に手を沿えながら話しかけている。" loading="lazy"/>
         </picture>
         <header class="heading-anchor">
           <h2>6.『新型コロナウイルスについて話をする』</h2>
@@ -549,7 +549,7 @@ date: Last Modified
         <section id="Be-open-and-listen">
           <picture>
             <source srcset="./illustrations/06_01.webp" type="image/webp"/>
-            <img src="./illustrations/06_01.jpg" alt="イラスト：子どもが、母親の袖を掴みながらさまざまな問いについて尋ねている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/06_01.jpg" alt="イラスト：子どもが、母親の袖を掴みながらさまざまな問いについて尋ねている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>子どもが話しやすい環境を作り、しっかり聞きましょう</h3>
@@ -562,7 +562,7 @@ date: Last Modified
         <section id="Be-honest">
           <picture>
             <source srcset="./illustrations/06_02.webp" type="image/webp"/>
-            <img src="./illustrations/06_02.jpg" alt="イラスト：向き合う子どもと母親。母親は人差し指を立てながら子どもに語りかけている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/06_02.jpg" alt="イラスト：向き合う子どもと母親。母親は人差し指を立てながら子どもに語りかけている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>正直に</h3>
@@ -575,7 +575,7 @@ date: Last Modified
         <section id="Be-supportive">
           <picture>
             <source srcset="./illustrations/06_03.webp" type="image/webp"/>
-            <img src="./illustrations/06_03.jpg" alt="イラスト：子どもの背後に父親と母親がたち、共に子どもの肩に手を沿えてやっている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/06_03.jpg" alt="イラスト：子どもの背後に父親と母親がたち、共に子どもの肩に手を沿えてやっている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>支えになって</h3>
@@ -588,7 +588,7 @@ date: Last Modified
         <section id="It-is-OK-not-to-know-the-answers">
           <picture>
             <source srcset="./illustrations/06_04.webp" type="image/webp"/>
-            <img src="./illustrations/06_04.jpg" alt="イラスト：父親が子どもに「実はお父さんも知らなくて」と話しかけている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/06_04.jpg" alt="イラスト：父親が子どもに「実はお父さんも知らなくて」と話しかけている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>答えを知らなくても大丈夫</h3>
@@ -601,7 +601,7 @@ date: Last Modified
         <section id="Heroes-not-bullies">
           <picture>
             <source srcset="./illustrations/06_05.webp" type="image/webp"/>
-            <img src="./illustrations/06_05.jpg" alt="イラスト：父親と子どもが「ウイルスを撃退する女の子」をイメージしている。子どもはその女の子に期待を寄せている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/06_05.jpg" alt="イラスト：父親と子どもが「ウイルスを撃退する女の子」をイメージしている。子どもはその女の子に期待を寄せている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>いじめっ子ではなくヒーローに</h3>
@@ -615,7 +615,7 @@ date: Last Modified
         <section id="There-are-a-lot-of-stories-going-around">
           <picture>
             <source srcset="./illustrations/06_06.webp" type="image/webp"/>
-            <img src="./illustrations/06_06.jpg" alt="イラスト：スマートフォンから、◯や✕の吹き出しがいくつも出現している。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/06_06.jpg" alt="イラスト：スマートフォンから、◯や✕の吹き出しがいくつも出現している。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>たくさんのストーリーが出回っています</h3>
@@ -635,7 +635,7 @@ date: Last Modified
         <section id="End-on-a-good-note">
           <picture>
             <source srcset="./illustrations/06_07.webp" type="image/webp"/>
-            <img src="./illustrations/06_07.jpg" alt="イラスト：母親と子どもがともに笑顔でお互いを見つめている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/06_07.jpg" alt="イラスト：母親と子どもがともに笑顔でお互いを見つめている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>気分良く終わりましょう</h3>
