--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -707,7 +707,7 @@ date: Last Modified
         </header>
         <p>本記事のライセンス：<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.ja">CC BY-NC-SA 4.0</a></p>
 
-        <p lang="en">This is an adaptation of an original work “<i class="original-document-title">Coronavirus disease (COVID-19) advice for the public: Healthy Parenting</i>. Geneva: World Health Organization (<abbr title="World Health Organization">WHO</abbr>); 2020. Licence: CC BY-NC-SA 3.0 IGO”. This adaptation was not created by <abbr title="World Health Organization">WHO</abbr>. <abbr title="World Health Organization">WHO</abbr> is not responsible for the content or accuracy of this adaptation. The original edition shall be the binding and authentic edition.</p>
+        <p lang="en">This is an adaptation of an original work “<cite>Coronavirus disease (COVID-19) advice for the public: Healthy Parenting</cite>. Geneva: World Health Organization (<abbr title="World Health Organization">WHO</abbr>); 2020. Licence: CC BY-NC-SA 3.0 IGO”. This adaptation was not created by <abbr title="World Health Organization">WHO</abbr>. <abbr title="World Health Organization">WHO</abbr> is not responsible for the content or accuracy of this adaptation. The original edition shall be the binding and authentic edition.</p>
 
         <p>オリジナルのポスター『<i lang="en">Coronavirus disease (COVID-19) advice for the public: Healthy Parenting</i>』はCC BY-NC-SA 3.0 IGOライセンスで配布されています。</p>
 
