--- a/src/parenting-who/style/main.css
+++ b/src/parenting-who/style/main.css
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 
-@import url(../../node_modules/normalize.css/normalize.css);
+@import url(../../../node_modules/normalize.css/normalize.css);
 
 html {
   font-family: "FP-ヒラギノUD角ゴ StdN W3", "FP-HiraginoUDSansStdN-W3",
@@ -130,7 +130,7 @@ ul ul {
   width: 24px;
   height: 24px;
   line-height: inherit;
-  background-image: url(/image/link-24px.svg);
+  background-image: url(/parenting-who/image/link-24px.svg);
   background-repeat: no-repeat;
   background-position: center center;
   opacity: 0;
